unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/FS_Accounting_Batch_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Accounting Batch Settings</label>
    <pluralLabel>Accounting Batch Settings</pluralLabel>
</CustomObject>