unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_Batch_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>FS_Batch_Name_Format__c</fullName>
    <description>Batch Name Format(convert MM and DD and YY and YYYY) in the format to the respective name</description>
    <inlineHelpText>Batch Name Format(convert MM and DD and YY and YYYY) in the format to the respective name</inlineHelpText>
    <label>Batch Name Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>