unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_Business_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Business_Group_Id__c</fullName>
    <inlineHelpText>This field holds the business group Id</inlineHelpText>
    <label>Business Group Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>