unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_Cutoff_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Cutoff_Time__c</fullName>
    <label>Cutoff Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>