unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_Payment_Gateway_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Payment_Gateway_Record_Id__c</fullName>
    <inlineHelpText>This field holds the Payment Gateway Record Id which needs to be updated on the batch</inlineHelpText>
    <label>Payment Gateway Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>