unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FS_Timezone__c</fullName>
    <inlineHelpText>https://help.salesforce.com/articleView?id=admin_supported_timezone.htm&amp;type=5</inlineHelpText>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>