unpackaged/main/default/objects/FS_Accounting_Batch_Settings__mdt/fields/FS_User_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_User_Profile_Id__c</fullName>
    <label>User Profile Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>